--- a/semester2.html
+++ b/semester2.html
@@ -113,7 +113,7 @@
 						<span class="box">
 							<a href="index.html">Home </a>
 							<i class="lnr lnr-arrow-right"></i>
-							<a href="semester2.html">BCA Sem 2nd</a>
+							<a href="semester2.html">MCA Sem 2nd</a>
 						</span>
 					</div>
 				</div>
