--- a/Semester1.html
+++ b/Semester1.html
@@ -246,15 +246,19 @@
 								<p><b></b></p>
 								<p><u>Download Unit Wise Notes:-</u>
 										<ul><div class="button-group-area mt-40">
-					<a rel="nofollow" href="https://drive.google.com/file/d/10ovjYafS00WV2lF8Rbs98xtOg5TjVulP/view?usp=sharing" class="genric-btn primary small">Unit I</a>
-					<a rel="nofollow" href="https://drive.google.com/file/d/19inMxrZXHdqKvHUbvfRPKiQzzs-iLuj5/view?usp=sharing" class="genric-btn primary small">Unit II</a>
-					<a rel="nofollow" href="https://drive.google.com/file/d/11krM1mLgwUxCVqvAjIu5RKlDAZfXApCc/view?usp=sharing" class="genric-btn primary small">Unit III</a>
-					<a rel="nofollow" href="https://drive.google.com/file/d/1Q6F8CeM_QOZrK5VAK4oqJBvRRu2OnepL/view?usp=sharing" class="genric-btn primary small">Unit IV</a>
-					<a rel="nofollow" href="https://drive.google.com/file/d/1u14WOFpFTbxPBsrmLCeYdzLapzWjEz1j/view?usp=sharing" class="genric-btn primary small">Unit V</a>
-					<a rel="nofollow" href="https://drive.google.com/file/d/1mpdtoA5oBbvRPqEVoTjE13PobKv1p3nd/view?usp=sharing" class="genric-btn primary small">Unit VI</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12hHlLezhsb6z-iOG12eIb-rjJGsxApjW/view?usp=drivesdk" class="genric-btn primary small">Unit I</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12xCazn1HuBXUlZyNOQQFxl6aKni3yWT_/view?usp=drivesdk" class="genric-btn primary small">Unit II</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12su59qhNC9CYSMUb7yxP4wXaRd5e3FCQ/view?usp=drivesdk" class="genric-btn primary small">Unit II</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12sXyz8jcHgQaTV-ZlwgqY47ZgfKzOM1b/view?usp=drivesdk" class="genric-btn primary small">Unit II</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12s2HTxOIa33fk4AeyPSxaa5k7oK49Bpm/view?usp=drivesdk" class="genric-btn primary small">Unit III</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/12pD_HYuEZA_N8dkuDa43jvs7_PbBsPNM/view?usp=drivesdk" class="genric-btn primary small">Unit III</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/130TBhMpgLoorsTFrzsCCjXuQQCDWLCW8/view?usp=drivesdk" class="genric-btn primary small">Unit IV</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/13-upE4L9T_cf1_aQqAfx7z7jng3hVbaS/view?usp=drivesdk" class="genric-btn primary small">Unit IV</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/133SIjt1gnfXemLmrwG-Dq_Q6AZl0ptCC/view?usp=drivesdk" class="genric-btn primary small">Unit V</a>
+					<a rel="nofollow" href="https://drive.google.com/file/d/13BJ1r9j_oMhtzacG80YDCMemgxKwBLEf/view?usp=drivesdk" class="genric-btn primary small">Unit V</a>
 				</p>
 				<ul>
-				 <li><p><a rel="nofollow" href="https://drive.google.com/file/d/1paDgIwzdIZs7lR7ogbe8edlItO9dWlPz/view?usp=sharing" class="genric-btn danger circle arrow">6 in 1(PDF)<span class="lnr lnr-arrow-right"></span></a></p></li>
+				 <li><p><a rel="nofollow" href="" class="genric-btn danger circle arrow">6 in 1(PDF)<span class="lnr lnr-arrow-right"></span></a></p></li>
 	</ul>
 	
 							</div>
