--- a/Semester1.html
+++ b/Semester1.html
@@ -106,7 +106,7 @@
 						MCA Semester 1st
 					</h1>
 					<p>
-						In the semester 1st, there are five subjects: COA , C Programming, POM, Discrete Math, FOC and there are two practical (COA, C LAB), with one Qualifying Paper of 'Enviromental Studes'.
+						In the semester 1st, there are five subjects: COA , C Programming, POM, Discrete Math, FCET and there are two practical (COA, C LAB).
 					</p>
 					<div class="link-nav">
 						<span class="box">
